--- a/rules.conf
+++ b/rules.conf
@@ -63,8 +63,6 @@ DOMAIN-SUFFIX,300hu.com,DIRECT
 DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
 DOMAIN-SUFFIX,3366.com,DIRECT
-DOMAIN-SUFFIX,3366img.com,DIRECT
-DOMAIN-SUFFIX,343480.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
 DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
@@ -80,7 +78,6 @@ DOMAIN-SUFFIX,51epei.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl.com,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
-DOMAIN-SUFFIX,51ym.me,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
@@ -88,19 +85,15 @@ DOMAIN-SUFFIX,58pic.com,DIRECT
 DOMAIN-SUFFIX,67tool.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
-DOMAIN-SUFFIX,71.am,DIRECT
-DOMAIN-SUFFIX,71.am.com,DIRECT
-DOMAIN-SUFFIX,71edge-com,DIRECT
+DOMAIN-SUFFIX,71edge.com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
-DOMAIN-SUFFIX,91flac.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
 DOMAIN-SUFFIX,9ku.com,DIRECT
-DOMAIN-SUFFIX,9xbuddy.app,DIRECT
 DOMAIN-SUFFIX,a5b.cc,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,abchina.com,DIRECT
@@ -116,7 +109,6 @@ DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,aip.org,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
-DOMAIN-SUFFIX,air-matters.io,DIRECT
 DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
 DOMAIN-SUFFIX,ajkimg.com,DIRECT
@@ -285,7 +277,6 @@ DOMAIN-SUFFIX,citicbank.com,DIRECT
 DOMAIN-SUFFIX,ci-du.com,DIRECT
 DOMAIN-SUFFIX,cl2009.com,DIRECT
 DOMAIN-SUFFIX,clarivate.com,DIRECT
-DOMAIN-SUFFIX,classix-unlimited.co.uk,DIRECT
 DOMAIN-SUFFIX,clewm.net,DIRECT
 DOMAIN-SUFFIX,cli.im,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
@@ -691,6 +682,7 @@ DOMAIN-SUFFIX,mtime.com,DIRECT
 DOMAIN-SUFFIX,mubu.com,DIRECT
 DOMAIN-SUFFIX,muniao.com,DIRECT
 DOMAIN-SUFFIX,mxhichina.com,DIRECT
+DOMAIN-SUFFIX,mxnzp.com,DIRECT
 DOMAIN-SUFFIX,myalicdn.com,DIRECT
 DOMAIN-SUFFIX,myanonamouse.net,DIRECT
 DOMAIN-SUFFIX,myapp.com,DIRECT
