--- a/rules.conf
+++ b/rules.conf
@@ -38,6 +38,7 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
