--- a/rules.conf
+++ b/rules.conf
@@ -108,6 +108,7 @@ DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
+DOMAIN-SUFFIX,aizhan.com,DIRECT
 DOMAIN-SUFFIX,ajkimg.com,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
