--- a/rules.conf
+++ b/rules.conf
@@ -525,6 +525,7 @@ DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,leapmotor.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
+DOMAIN-SUFFIX,letv.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
 DOMAIN-SUFFIX,lf127.net,DIRECT
 DOMAIN-SUFFIX,liangxinyao.com,DIRECT
