--- a/rules.conf
+++ b/rules.conf
@@ -61,6 +61,7 @@ DOMAIN-SUFFIX,1ting.com,DIRECT
 DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,21jingji.com,DIRECT
 DOMAIN-SUFFIX,300hu.com,DIRECT
+DOMAIN-SUFFIX,31huiyi.com,DIRECT
 DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
 DOMAIN-SUFFIX,3366.com,DIRECT
@@ -83,6 +84,7 @@ DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
+DOMAIN-SUFFIX,63243.com,DIRECT
 DOMAIN-SUFFIX,67tool.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
@@ -352,6 +354,7 @@ DOMAIN-SUFFIX,galaxy-geely.com,DIRECT
 DOMAIN-SUFFIX,gamersky.com,DIRECT
 DOMAIN-SUFFIX,ganji.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
+DOMAIN-SUFFIX,gcores.com,DIRECT
 DOMAIN-SUFFIX,gdtimg.com,DIRECT
 DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
@@ -380,6 +383,7 @@ DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
+DOMAIN-SUFFIX,haozhuji.net,DIRECT
 DOMAIN-SUFFIX,hc-cdn.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,hellobixin.com,DIRECT
@@ -548,6 +552,7 @@ DOMAIN-SUFFIX,mafengwo.net,DIRECT
 DOMAIN-SUFFIX,magiconch.com,DIRECT
 DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 DOMAIN-SUFFIX,maoyan.com,DIRECT
+DOMAIN-SUFFIX,markdown.xyz,DIRECT
 DOMAIN-SUFFIX,meimingteng.com,DIRECT
 DOMAIN-SUFFIX,meipai.com,DIRECT
 DOMAIN-SUFFIX,meishi.cc,DIRECT
@@ -589,6 +594,7 @@ DOMAIN-SUFFIX,myapp.com,DIRECT
 DOMAIN-SUFFIX,mydrivers.com,DIRECT
 DOMAIN-SUFFIX,myhuaweicloud.com,DIRECT
 DOMAIN-SUFFIX,myqcloud.com,DIRECT
+DOMAIN-SUFFIX,myssl.com,DIRECT
 DOMAIN-SUFFIX,myzaker.com,DIRECT
 DOMAIN-SUFFIX,mzi8.com,DIRECT
 DOMAIN-SUFFIX,ndcimgs.com,DIRECT
@@ -609,6 +615,7 @@ DOMAIN-SUFFIX,ourdvsss.com,DIRECT
 DOMAIN-SUFFIX,ouyaoxiazai.com,DIRECT
 DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
+DOMAIN-SUFFIX,panepay.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
@@ -659,7 +666,6 @@ DOMAIN-SUFFIX,qy.net,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,qyerstatic.com,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
-DOMAIN-SUFFIX,rfchost.com,DIRECT
 DOMAIN-SUFFIX,risingauto.com,DIRECT
 DOMAIN-SUFFIX,ronghub.com,DIRECT
 DOMAIN-SUFFIX,router.asus.com,DIRECT
@@ -904,6 +910,7 @@ DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zhongche.com,DIRECT
+DOMAIN-SUFFIX,zhujiceping.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zjcdn.com,DIRECT
 DOMAIN-SUFFIX,zone139.com,DIRECT
