--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -147,6 +147,7 @@ DOMAIN-SUFFIX,aso100.com,DIRECT
 DOMAIN-SUFFIX,atianqi.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
 DOMAIN-SUFFIX,avatr.com,DIRECT
+DOMAIN-SUFFIX,b23.tv,DIRECT
 DOMAIN-SUFFIX,babybus.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidupcs.com,DIRECT
@@ -866,6 +867,7 @@ DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
 DOMAIN-SUFFIX,yhd.com,DIRECT
+DOMAIN-SUFFIX,yhgfb-cn-static.com,DIRECT
 DOMAIN-SUFFIX,yi958.com,DIRECT
 DOMAIN-SUFFIX,yicai.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,DIRECT
