--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -366,6 +366,7 @@ DOMAIN-SUFFIX,getui.com,DIRECT
 DOMAIN-SUFFIX,getui.net,DIRECT
 DOMAIN-SUFFIX,gifshow.com,DIRECT
 DOMAIN-SUFFIX,giocdn.com,DIRECT
+DOMAIN-SUFFIX,gitee.com,DIRECT
 DOMAIN-SUFFIX,gitv.tv,DIRECT
 DOMAIN-SUFFIX,globalsign.com,DIRECT
 DOMAIN-SUFFIX,godic.net,DIRECT
@@ -511,6 +512,7 @@ DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,kwaicdn.com,DIRECT
 DOMAIN-SUFFIX,kwaixiaodian.com,DIRECT
 DOMAIN-SUFFIX,kwimgs.com,DIRECT
+DOMAIN-SUFFIX,landingbj.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,lanosso.com,DIRECT
 DOMAIN-SUFFIX,lanrar.com,DIRECT
@@ -832,6 +834,7 @@ DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
+DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
