--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -719,6 +719,7 @@ DOMAIN-SUFFIX,ssports.com,DIRECT
 DOMAIN-SUFFIX,ssrcdn.com,DIRECT
 DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
+DOMAIN-SUFFIX,staybrowser.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
 DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
