--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -221,6 +221,7 @@ DOMAIN-SUFFIX,cdnhwc2.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
+DOMAIN-SUFFIX,chaoxing.com,DIRECT
 DOMAIN-SUFFIX,chazidian.com,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
 DOMAIN-SUFFIX,chebiao.net,DIRECT
