--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -95,6 +95,7 @@ DOMAIN-SUFFIX,800bestex.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
+DOMAIN-SUFFIX,91hka.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
 DOMAIN-SUFFIX,9ku.com,DIRECT
 DOMAIN-SUFFIX,a5b.cc,DIRECT
@@ -357,6 +358,7 @@ DOMAIN-SUFFIX,ganji.com,DIRECT
 DOMAIN-SUFFIX,gaodun.com,DIRECT
 DOMAIN-SUFFIX,gcores.com,DIRECT
 DOMAIN-SUFFIX,gdtimg.com,DIRECT
+DOMAIN-SUFFIX,geekbang.org,DIRECT
 DOMAIN-SUFFIX,geely.com,DIRECT
 DOMAIN-SUFFIX,geetest.com,DIRECT
 DOMAIN-SUFFIX,geevisit.com,DIRECT
@@ -770,6 +772,7 @@ DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
+DOMAIN-SUFFIX,ucloud.cn,DIRECT
 DOMAIN-SUFFIX,ucweb.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
