--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -53,6 +53,7 @@ DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,1688.com,DIRECT
 DOMAIN-SUFFIX,17173.com,DIRECT
 DOMAIN-SUFFIX,178.com,DIRECT
+DOMAIN-SUFFIX,17ce.com,DIRECT
 DOMAIN-SUFFIX,17usoft.com,DIRECT
 DOMAIN-SUFFIX,188188.org,DIRECT
 DOMAIN-SUFFIX,1ppt.com,DIRECT
@@ -111,6 +112,7 @@ DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
+DOMAIN-SUFFIX,aixinzhijie.com,DIRECT
 DOMAIN-SUFFIX,aizhan.com,DIRECT
 DOMAIN-SUFFIX,ajkimg.com,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
@@ -269,6 +271,7 @@ DOMAIN-SUFFIX,ctrip.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
 DOMAIN-SUFFIX,daojia.com,DIRECT
+DOMAIN-SUFFIX,dayanzai.me,DIRECT
 DOMAIN-SUFFIX,dcarapi.com,DIRECT
 DOMAIN-SUFFIX,dcarimg.com,DIRECT
 DOMAIN-SUFFIX,dcarstatic.com,DIRECT
@@ -276,6 +279,7 @@ DOMAIN-SUFFIX,dcarvod.com,DIRECT
 DOMAIN-SUFFIX,dcdapp.com,DIRECT
 DOMAIN-SUFFIX,dcloud.io,DIRECT
 DOMAIN-SUFFIX,dd-advisor.com,DIRECT
+DOMAIN-SUFFIX,decmose.top,DIRECT
 DOMAIN-SUFFIX,deppon.com,DIRECT
 DOMAIN-SUFFIX,dfcfw.com,DIRECT
 DOMAIN-SUFFIX,dianping.com,DIRECT
