--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -5,7 +5,7 @@ tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 17
 dns-server = dns.alidns.com
 fallback-dns-server = system
 ipv6 = true
-prefer-ipv6 = true
+prefer-ipv6 = false
 dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
@@ -387,6 +387,7 @@ DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,guoxueziyuan.com,DIRECT
 DOMAIN-SUFFIX,gushici.net,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
+DOMAIN-SUFFIX,h3c.com,DIRECT
 DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
@@ -687,6 +688,7 @@ DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
+DOMAIN-SUFFIX,segmentfault.com,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
 DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
