--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -107,6 +107,7 @@ DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,adkwai.com,DIRECT
 DOMAIN-SUFFIX,adukwai.com,DIRECT
 DOMAIN-SUFFIX,agora.io,DIRECT
+DOMAIN-SUFFIX,aicn.me,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aikucun.com,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
@@ -323,6 +324,7 @@ DOMAIN-SUFFIX,ecombdpage.com,DIRECT
 DOMAIN-SUFFIX,ecombdstatic.com,DIRECT
 DOMAIN-SUFFIX,ecukwai.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
+DOMAIN-SUFFIX,edianyun.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
 DOMAIN-SUFFIX,ehaier.com,DIRECT
 DOMAIN-SUFFIX,ele.me,DIRECT
@@ -448,6 +450,7 @@ DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,inkuai.com,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
+DOMAIN-SUFFIX,iplaysoft.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
 DOMAIN-SUFFIX,irs01.com,DIRECT
