--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -2,8 +2,8 @@
 bypass-system = true
 skip-proxy = 127.0.0.0/8, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, asusrouter.com, router.asus.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 239.255.255.250/32, 255.255.255.255/32
-dns-server = tls://1.12.12.12:853, tls://120.53.53.53:853
-fallback-dns-server = 119.29.29.29, 223.5.5.5
+dns-server = 180.184.1.1, 180.184.2.2
+fallback-dns-server = 223.5.5.5, 119.29.29.29
 ipv6 = true
 prefer-ipv6 = false
 dns-direct-system = false
@@ -35,7 +35,7 @@ USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
-DOMAIN-SUFFIX,10010.com,DIRECT
+DOMAIN-SUFFIX,10010.com,DIRECT 
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,12365auto.com,DIRECT
@@ -75,8 +75,8 @@ DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
 DOMAIN-SUFFIX,51epei.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
-DOMAIN-SUFFIX,51wnl.com,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
+DOMAIN-SUFFIX,51wnl.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
@@ -90,6 +90,7 @@ DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
+DOMAIN-SUFFIX,87086998.xyz,DIRECT
 DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
 DOMAIN-SUFFIX,91hka.com,DIRECT
@@ -106,6 +107,7 @@ DOMAIN-SUFFIX,agora.io,DIRECT
 DOMAIN-SUFFIX,aicn.me,DIRECT
 DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
 DOMAIN-SUFFIX,aikucun.com,DIRECT
+DOMAIN-SUFFIX,aiqfd.com,DIRECT
 DOMAIN-SUFFIX,air-matters.com,DIRECT
 DOMAIN-SUFFIX,aito.auto,DIRECT
 DOMAIN-SUFFIX,aixifan.com,DIRECT
@@ -114,9 +116,9 @@ DOMAIN-SUFFIX,aizhan.com,DIRECT
 DOMAIN-SUFFIX,ajkimg.com,DIRECT
 DOMAIN-SUFFIX,ali213.net,DIRECT
 DOMAIN-SUFFIX,aliapp.org,DIRECT
+DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
 DOMAIN-SUFFIX,alibabachengdun.com,DIRECT
-DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
@@ -142,6 +144,7 @@ DOMAIN-SUFFIX,appsimg.com,DIRECT
 DOMAIN-SUFFIX,appvipshop.com,DIRECT
 DOMAIN-SUFFIX,aqsiqauto.com,DIRECT
 DOMAIN-SUFFIX,archina.com,DIRECT
+DOMAIN-SUFFIX,arkread.com,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
 DOMAIN-SUFFIX,aso100.com,DIRECT
 DOMAIN-SUFFIX,atianqi.com,DIRECT
@@ -191,12 +194,12 @@ DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
 DOMAIN-SUFFIX,bytecdn.com,DIRECT
+DOMAIN-SUFFIX,byted-static.com,DIRECT
+DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedance.net,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
-DOMAIN-SUFFIX,byted-static.com,DIRECT
-DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
 DOMAIN-SUFFIX,bytefae.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
@@ -221,6 +224,7 @@ DOMAIN-SUFFIX,cdnhwc2.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
+DOMAIN-SUFFIX,chajianxw.com,DIRECT
 DOMAIN-SUFFIX,chaoxing.com,DIRECT
 DOMAIN-SUFFIX,chazidian.com,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
@@ -244,6 +248,7 @@ DOMAIN-SUFFIX,citicbank.com,DIRECT
 DOMAIN-SUFFIX,cl2009.com,DIRECT
 DOMAIN-SUFFIX,clewm.net,DIRECT
 DOMAIN-SUFFIX,cli.im,DIRECT
+DOMAIN-SUFFIX,cloudbool.com,DIRECT
 DOMAIN-SUFFIX,clouddn.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,cmbimg.com,DIRECT
@@ -462,8 +467,8 @@ DOMAIN-SUFFIX,jd.com,DIRECT
 DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,jdapi.com,DIRECT
 DOMAIN-SUFFIX,jdbusiness.com,DIRECT
-DOMAIN-SUFFIX,jdcloud.com,DIRECT
 DOMAIN-SUFFIX,jdcloud-oss.com,DIRECT
+DOMAIN-SUFFIX,jdcloud.com,DIRECT
 DOMAIN-SUFFIX,jddebug.com,DIRECT
 DOMAIN-SUFFIX,jddj.com,DIRECT
 DOMAIN-SUFFIX,jdl.com,DIRECT
@@ -487,6 +492,7 @@ DOMAIN-SUFFIX,joinchitchat.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
 DOMAIN-SUFFIX,joying.com,DIRECT
+DOMAIN-SUFFIX,jpplanking.com,DIRECT
 DOMAIN-SUFFIX,jpush.io,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
@@ -503,8 +509,8 @@ DOMAIN-SUFFIX,komect.com,DIRECT
 DOMAIN-SUFFIX,kongfz.com,DIRECT
 DOMAIN-SUFFIX,kongpm.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
-DOMAIN-SUFFIX,ksapisrv.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
+DOMAIN-SUFFIX,ksapisrv.com,DIRECT
 DOMAIN-SUFFIX,kskwai.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
 DOMAIN-SUFFIX,kspkg.com,DIRECT
@@ -538,6 +544,7 @@ DOMAIN-SUFFIX,laravel-admin.org,DIRECT
 DOMAIN-SUFFIX,le.com,DIRECT
 DOMAIN-SUFFIX,leapmotor.com,DIRECT
 DOMAIN-SUFFIX,learnku.com,DIRECT
+DOMAIN-SUFFIX,leju.com,DIRECT
 DOMAIN-SUFFIX,letv.com,DIRECT
 DOMAIN-SUFFIX,leyunge.com,DIRECT
 DOMAIN-SUFFIX,lf127.net,DIRECT
@@ -574,13 +581,13 @@ DOMAIN-SUFFIX,meitustat.com,DIRECT
 DOMAIN-SUFFIX,meixincdn.com,DIRECT
 DOMAIN-SUFFIX,meizu.com,DIRECT
 DOMAIN-SUFFIX,mgtv.com,DIRECT
+DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,mi.com,DIRECT
 DOMAIN-SUFFIX,mianyangauto.com,DIRECT
 DOMAIN-SUFFIX,miaopai.com,DIRECT
 DOMAIN-SUFFIX,miaozhen.com,DIRECT
 DOMAIN-SUFFIX,miercn.com,DIRECT
 DOMAIN-SUFFIX,miguvideo.com,DIRECT
-DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,minapp.com,DIRECT
 DOMAIN-SUFFIX,miui.com,DIRECT
 DOMAIN-SUFFIX,miwifi.com,DIRECT
@@ -619,15 +626,16 @@ DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
 DOMAIN-SUFFIX,oraev.com,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
+DOMAIN-SUFFIX,oumengke.com,DIRECT
 DOMAIN-SUFFIX,ourdvs.com,DIRECT
 DOMAIN-SUFFIX,ourdvsss.com,DIRECT
 DOMAIN-SUFFIX,ouyaoxiazai.com,DIRECT
 DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
 DOMAIN-SUFFIX,panepay.com,DIRECT
+DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
-DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pddpic.com,DIRECT
@@ -681,6 +689,7 @@ DOMAIN-SUFFIX,rtbasia.com,DIRECT
 DOMAIN-SUFFIX,rtxapp.com,DIRECT
 DOMAIN-SUFFIX,ruguoapp.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
+DOMAIN-SUFFIX,s-reader.com,DIRECT
 DOMAIN-SUFFIX,sankuai.com,DIRECT
 DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
@@ -697,6 +706,7 @@ DOMAIN-SUFFIX,shujupie.com,DIRECT
 DOMAIN-SUFFIX,shunchangzhixing.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,shuqireader.com,DIRECT
+DOMAIN-SUFFIX,shuyi.tech,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,sinaapp.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
@@ -707,20 +717,20 @@ DOMAIN-SUFFIX,smxs.com,DIRECT
 DOMAIN-SUFFIX,smzdm.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,so.com,DIRECT
+DOMAIN-SUFFIX,soarli.top,DIRECT
 DOMAIN-SUFFIX,sobaidupan.com,DIRECT
 DOMAIN-SUFFIX,sobot.com,DIRECT
 DOMAIN-SUFFIX,soboten.com,DIRECT
 DOMAIN-SUFFIX,sogo.com,DIRECT
 DOMAIN-SUFFIX,sogou.com,DIRECT
 DOMAIN-SUFFIX,sogoucdn.com,DIRECT
+DOMAIN-SUFFIX,sohu-inc.com,DIRECT
 DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,sohucs.com,DIRECT
-DOMAIN-SUFFIX,sohu-inc.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
 DOMAIN-SUFFIX,sosoyunpan.com,DIRECT
 DOMAIN-SUFFIX,spdydns.com,DIRECT
-DOMAIN-SUFFIX,s-reader.com,DIRECT
 DOMAIN-SUFFIX,sspai.com,DIRECT
 DOMAIN-SUFFIX,ssports.com,DIRECT
 DOMAIN-SUFFIX,ssrcdn.com,DIRECT
@@ -743,9 +753,9 @@ DOMAIN-SUFFIX,taobaocdn.com,DIRECT
 DOMAIN-SUFFIX,taoche.com,DIRECT
 DOMAIN-SUFFIX,tbcache.com,DIRECT
 DOMAIN-SUFFIX,tec73.com,DIRECT
-DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
+DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencentcs.com,DIRECT
 DOMAIN-SUFFIX,tencentmusic.com,DIRECT
 DOMAIN-SUFFIX,tengshiauto.com,DIRECT
@@ -776,6 +786,7 @@ DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
+DOMAIN-SUFFIX,ubtrip.com,DIRECT
 DOMAIN-SUFFIX,ucloud.cn,DIRECT
 DOMAIN-SUFFIX,ucweb.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
@@ -855,6 +866,7 @@ DOMAIN-SUFFIX,xiami.net,DIRECT
 DOMAIN-SUFFIX,xiancn.com,DIRECT
 DOMAIN-SUFFIX,xiaohongshu.com,DIRECT
 DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
+DOMAIN-SUFFIX,xiaomark.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
 DOMAIN-SUFFIX,xiaopeng.com,DIRECT
 DOMAIN-SUFFIX,xiaoyastar.com,DIRECT
@@ -886,6 +898,7 @@ DOMAIN-SUFFIX,yiche.com,DIRECT
 DOMAIN-SUFFIX,yidun.com,DIRECT
 DOMAIN-SUFFIX,yihaocar.com,DIRECT
 DOMAIN-SUFFIX,yinyuetai.com,DIRECT
+DOMAIN-SUFFIX,yiqifei.com,DIRECT
 DOMAIN-SUFFIX,yixia.com,DIRECT
 DOMAIN-SUFFIX,yiyaojd.com,DIRECT
 DOMAIN-SUFFIX,yizhibo.com,DIRECT
