--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -30,12 +30,15 @@ IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
 IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
 GEOIP,CN,DIRECT,no-resolve
+DOMAIN-SUFFIX,bing.com.cn,PROXY
+DOMAIN-SUFFIX,microsoft.com.cn,PROXY
+DOMAIN-SUFFIX,msn.cn,PROXY
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
-DOMAIN-SUFFIX,10010.com,DIRECT 
+DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,12365auto.com,DIRECT
@@ -447,6 +450,7 @@ DOMAIN-SUFFIX,img16888.com,DIRECT
 DOMAIN-SUFFIX,imgcdc.com,DIRECT
 DOMAIN-SUFFIX,immotors.com,DIRECT
 DOMAIN-SUFFIX,imooc.com,DIRECT
+DOMAIN-SUFFIX,ineuro.net,DIRECT
 DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,inkuai.com,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
@@ -636,6 +640,7 @@ DOMAIN-SUFFIX,panepay.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
+DOMAIN-SUFFIX,panziye.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
 DOMAIN-SUFFIX,pddpic.com,DIRECT
