--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -31,6 +31,7 @@ IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 DOMAIN-SUFFIX,bing.com.cn,PROXY
+DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
 USER-AGENT,QQ*,DIRECT
