--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -29,6 +29,7 @@ IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
 IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
+IP-CIDR,111.31.188.38,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
@@ -194,6 +195,7 @@ DOMAIN-SUFFIX,boce.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.net,DIRECT
 DOMAIN-SUFFIX,bootcss.com,DIRECT
 DOMAIN-SUFFIX,bosszhipin.com,DIRECT
+DOMAIN-SUFFIX,bsccdn.net,DIRECT
 DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
@@ -515,6 +517,7 @@ DOMAIN-SUFFIX,kongfz.com,DIRECT
 DOMAIN-SUFFIX,kongpm.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
+DOMAIN-SUFFIX,ks-live.com,DIRECT
 DOMAIN-SUFFIX,ksapisrv.com,DIRECT
 DOMAIN-SUFFIX,kskwai.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
@@ -676,6 +679,7 @@ DOMAIN-SUFFIX,qiniu.io,DIRECT
 DOMAIN-SUFFIX,qiniuapi.com,DIRECT
 DOMAIN-SUFFIX,qiniucdn.com,DIRECT
 DOMAIN-SUFFIX,qiniudns.com,DIRECT
+DOMAIN-SUFFIX,qishui.com,DIRECT
 DOMAIN-SUFFIX,qiushibaike.com,DIRECT
 DOMAIN-SUFFIX,qiuziti.com,DIRECT
 DOMAIN-SUFFIX,qiyi.com,DIRECT
@@ -700,6 +704,7 @@ DOMAIN-SUFFIX,sankuai.com,DIRECT
 DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
+DOMAIN-SUFFIX,searchpstatp.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,segmentfault.com,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
@@ -845,6 +850,7 @@ DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weibocdn.com,DIRECT
 DOMAIN-SUFFIX,weidian.com,DIRECT
 DOMAIN-SUFFIX,weidianfans.com,DIRECT
+DOMAIN-SUFFIX,weilayun.com,DIRECT
 DOMAIN-SUFFIX,weixin.com,DIRECT
 DOMAIN-SUFFIX,weixinbridge.com,DIRECT
 DOMAIN-SUFFIX,weixinsxy.com,DIRECT
