--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -29,7 +29,7 @@ IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
 IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
-IP-CIDR,111.31.188.38,DIRECT,no-resolve
+IP-CIDR,111.31.188.38/32,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
