--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -29,7 +29,7 @@ IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
 IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
-IP-CIDR,111.31.188.38/32,DIRECT,no-resolve
+IP-CIDR,111.31.188.0/24,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
@@ -498,6 +498,7 @@ DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,joinchitchat.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
+DOMAIN-SUFFIX,jomoxd.com,DIRECT
 DOMAIN-SUFFIX,joying.com,DIRECT
 DOMAIN-SUFFIX,jpplanking.com,DIRECT
 DOMAIN-SUFFIX,jpush.io,DIRECT
