--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -843,6 +843,7 @@ DOMAIN-SUFFIX,vpimg4.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
+DOMAIN-SUFFIX,wasu.tv,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
 DOMAIN-SUFFIX,wechatlegal.net,DIRECT
