--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -389,6 +389,7 @@ DOMAIN-SUFFIX,godic.net,DIRECT
 DOMAIN-SUFFIX,goofish.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,grg-gas.com,DIRECT
+DOMAIN-SUFFIX,gridsumdissector.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
@@ -654,6 +655,7 @@ DOMAIN-SUFFIX,pglstatp-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.net,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
+DOMAIN-SUFFIX,ppdai.com,DIRECT
 DOMAIN-SUFFIX,ppio.cloud,DIRECT
 DOMAIN-SUFFIX,pplive.com,DIRECT
 DOMAIN-SUFFIX,pps.tv,DIRECT
