--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -40,6 +40,7 @@ USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
+DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -171,6 +172,7 @@ DOMAIN-SUFFIX,bdatu.com,DIRECT
 DOMAIN-SUFFIX,bdimg.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bdurl.net,DIRECT
+DOMAIN-SUFFIX,bdxiguaimg.com,DIRECT
 DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,beizi.biz,DIRECT
