--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -39,6 +39,7 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
@@ -310,6 +311,7 @@ DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,doupay.com,DIRECT
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,douyincdn.com,DIRECT
+DOMAIN-SUFFIX,douyinliving.com,DIRECT
 DOMAIN-SUFFIX,douyinpic.com,DIRECT
 DOMAIN-SUFFIX,douyinstatic.com,DIRECT
 DOMAIN-SUFFIX,douyinvod.com,DIRECT
