--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -513,6 +513,7 @@ DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
 DOMAIN-SUFFIX,kcdnvip.com,DIRECT
 DOMAIN-SUFFIX,ke.com,DIRECT
 DOMAIN-SUFFIX,keepcdn.com,DIRECT
+DOMAIN-SUFFIX,kejet.net,DIRECT
 DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kfzimg.com,DIRECT
