--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -709,6 +709,7 @@ DOMAIN-SUFFIX,ruguoapp.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,s-reader.com,DIRECT
 DOMAIN-SUFFIX,sankuai.com,DIRECT
+DOMAIN-SUFFIX,saraba1st.com,DIRECT
 DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
