--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -532,6 +532,7 @@ DOMAIN-SUFFIX,kspkg.com,DIRECT
 DOMAIN-SUFFIX,ksyun.com,DIRECT
 DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
+DOMAIN-SUFFIX,kuaikanmanhua.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kuaishouzt.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
