--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -808,6 +808,7 @@ DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
+DOMAIN-SUFFIX,tyhlw.org,DIRECT
 DOMAIN-SUFFIX,ubtrip.com,DIRECT
 DOMAIN-SUFFIX,ucloud.cn,DIRECT
 DOMAIN-SUFFIX,ucweb.com,DIRECT
