--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -669,6 +669,7 @@ DOMAIN-SUFFIX,ppsport.com,DIRECT
 DOMAIN-SUFFIX,pptv.com,DIRECT
 DOMAIN-SUFFIX,processon.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
+DOMAIN-SUFFIX,puata.info,DIRECT
 DOMAIN-SUFFIX,q2cdn.com,DIRECT
 DOMAIN-SUFFIX,qbox.me,DIRECT
 DOMAIN-SUFFIX,qcc.com,DIRECT
