--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -215,7 +215,9 @@ DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegecko.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
 DOMAIN-SUFFIX,byteimg.com,DIRECT
+DOMAIN-SUFFIX,byteky.com,DIRECT
 DOMAIN-SUFFIX,bytemaimg.com,DIRECT
+DOMAIN-SUFFIX,bytemastatic.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
@@ -280,6 +282,7 @@ DOMAIN-SUFFIX,cssmoban.com,DIRECT
 DOMAIN-SUFFIX,ctobsnssdk.com,DIRECT
 DOMAIN-SUFFIX,ctrip.com,DIRECT
 DOMAIN-SUFFIX,cyol.com,DIRECT
+DOMAIN-SUFFIX,dailygn.com,DIRECT
 DOMAIN-SUFFIX,dangdang.com,DIRECT
 DOMAIN-SUFFIX,daojia.com,DIRECT
 DOMAIN-SUFFIX,dayanzai.me,DIRECT
