--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -31,17 +31,18 @@ IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
 IP-CIDR,111.31.188.0/24,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,QQ*,DIRECT
+USER-AGENT,TIM*,DIRECT
+USER-AGENT,WeChat*,DIRECT
+DOMAIN-KEYWORD,douyin,DIRECT
+DOMAIN-KEYWORD,kwai,DIRECT
+DOMAIN-KEYWORD,toutiao,DIRECT
+DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
-USER-AGENT,QQ*,DIRECT
-USER-AGENT,TIM*,DIRECT
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,WeChat*,DIRECT
-DOMAIN-KEYWORD,douyin,DIRECT
-DOMAIN-KEYWORD,toutiao,DIRECT
-DOMAIN-KEYWORD,xigua,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -153,6 +154,7 @@ DOMAIN-SUFFIX,aqsiqauto.com,DIRECT
 DOMAIN-SUFFIX,archina.com,DIRECT
 DOMAIN-SUFFIX,arkread.com,DIRECT
 DOMAIN-SUFFIX,asklib.com,DIRECT
+DOMAIN-SUFFIX,aslk2018.com,DIRECT
 DOMAIN-SUFFIX,aso100.com,DIRECT
 DOMAIN-SUFFIX,atianqi.com,DIRECT
 DOMAIN-SUFFIX,autonavi.com,DIRECT
@@ -175,6 +177,7 @@ DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,bdurl.net,DIRECT
 DOMAIN-SUFFIX,bdxiguaimg.com,DIRECT
 DOMAIN-SUFFIX,bdxiguastatic.com,DIRECT
+DOMAIN-SUFFIX,beckwai.com,DIRECT
 DOMAIN-SUFFIX,beitaichufang.com,DIRECT
 DOMAIN-SUFFIX,beizi.biz,DIRECT
 DOMAIN-SUFFIX,bejson.com,DIRECT
@@ -543,6 +546,7 @@ DOMAIN-SUFFIX,kuiniuca.com,DIRECT
 DOMAIN-SUFFIX,kvov.com,DIRECT
 DOMAIN-SUFFIX,kwaicdn.com,DIRECT
 DOMAIN-SUFFIX,kwaixiaodian.com,DIRECT
+DOMAIN-SUFFIX,kwaizt.com,DIRECT
 DOMAIN-SUFFIX,kwimgs.com,DIRECT
 DOMAIN-SUFFIX,landingbj.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
@@ -812,6 +816,7 @@ DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
+DOMAIN-SUFFIX,txcdns.com,DIRECT
 DOMAIN-SUFFIX,tyhlw.org,DIRECT
 DOMAIN-SUFFIX,ubtrip.com,DIRECT
 DOMAIN-SUFFIX,ucloud.cn,DIRECT
@@ -910,6 +915,7 @@ DOMAIN-SUFFIX,xshiqi.com,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
+DOMAIN-SUFFIX,xxpkg.com,DIRECT
 DOMAIN-SUFFIX,xycdn.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
