--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -886,6 +886,7 @@ DOMAIN-SUFFIX,woa.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
+DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
