--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -224,6 +224,7 @@ DOMAIN-SUFFIX,bytemastatic.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
+DOMAIN-SUFFIX,c-ctrip.com,DIRECT
 DOMAIN-SUFFIX,c360dn.com,DIRECT
 DOMAIN-SUFFIX,cailianpress.com,DIRECT
 DOMAIN-SUFFIX,cainiao.com,DIRECT
@@ -525,6 +526,7 @@ DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kfzimg.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
+DOMAIN-SUFFIX,klook.com,DIRECT
 DOMAIN-SUFFIX,komect.com,DIRECT
 DOMAIN-SUFFIX,kongfz.com,DIRECT
 DOMAIN-SUFFIX,kongpm.com,DIRECT
