--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -437,6 +437,7 @@ DOMAIN-SUFFIX,huaweicloud.com,DIRECT
 DOMAIN-SUFFIX,huaweistatic.com,DIRECT
 DOMAIN-SUFFIX,huazirc.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
+DOMAIN-SUFFIX,huigezi.org,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huxiucdn.com,DIRECT
