--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -835,6 +835,7 @@ DOMAIN-SUFFIX,umsns.com,DIRECT
 DOMAIN-SUFFIX,umtrack.com,DIRECT
 DOMAIN-SUFFIX,unicompayment.com,DIRECT
 DOMAIN-SUFFIX,uovz.com,DIRECT
+DOMAIN-SUFFIX,uuchuzu.com,DIRECT
 DOMAIN-SUFFIX,uupt.com,DIRECT
 DOMAIN-SUFFIX,uuu9.com,DIRECT
 DOMAIN-SUFFIX,uyunad.com,DIRECT
