--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -325,6 +325,7 @@ DOMAIN-SUFFIX,douyinvod.com,DIRECT
 DOMAIN-SUFFIX,douyu.com,DIRECT
 DOMAIN-SUFFIX,douyuscdn.com,DIRECT
 DOMAIN-SUFFIX,doyoudo.com,DIRECT
+DOMAIN-SUFFIX,dpfile.com,DIRECT
 DOMAIN-SUFFIX,drivergenius.com,DIRECT
 DOMAIN-SUFFIX,duitang.com,DIRECT
 DOMAIN-SUFFIX,duokan.com,DIRECT
