--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -224,6 +224,7 @@ DOMAIN-SUFFIX,bytemastatic.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
+DOMAIN-SUFFIX,bytexservice.com,DIRECT
 DOMAIN-SUFFIX,c-ctrip.com,DIRECT
 DOMAIN-SUFFIX,c360dn.com,DIRECT
 DOMAIN-SUFFIX,cailianpress.com,DIRECT
@@ -342,6 +343,7 @@ DOMAIN-SUFFIX,ecombdimg.com,DIRECT
 DOMAIN-SUFFIX,ecombdpage.com,DIRECT
 DOMAIN-SUFFIX,ecombdstatic.com,DIRECT
 DOMAIN-SUFFIX,ecukwai.com,DIRECT
+DOMAIN-SUFFIX,edge-byted.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
 DOMAIN-SUFFIX,edianyun.com,DIRECT
 DOMAIN-SUFFIX,effirst.com,DIRECT
