--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -43,6 +43,7 @@ DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
+DOMAIN-SUFFIX,0kkkkkt.com,PROXY
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
