--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -128,6 +128,7 @@ DOMAIN-SUFFIX,aliapp.org,DIRECT
 DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
 DOMAIN-SUFFIX,alibabachengdun.com,DIRECT
+DOMAIN-SUFFIX,alibabachengdun.net,DIRECT
 DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
@@ -585,6 +586,7 @@ DOMAIN-SUFFIX,liepin.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
 DOMAIN-SUFFIX,lixiang.com,DIRECT
 DOMAIN-SUFFIX,ljcdn.com,DIRECT
+DOMAIN-SUFFIX,lnk0.com,DIRECT
 DOMAIN-SUFFIX,lofter.com,DIRECT
 DOMAIN-SUFFIX,loli.net,DIRECT
 DOMAIN-SUFFIX,longzhu.com,DIRECT
@@ -696,6 +698,7 @@ DOMAIN-SUFFIX,qichacha.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qiecdn.com,DIRECT
 DOMAIN-SUFFIX,qiku.com,DIRECT
+DOMAIN-SUFFIX,qingfuwucdn.net,DIRECT
 DOMAIN-SUFFIX,qingting.fm,DIRECT
 DOMAIN-SUFFIX,qingzhouip.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
