--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -223,6 +223,7 @@ DOMAIN-SUFFIX,byteimg.com,DIRECT
 DOMAIN-SUFFIX,byteky.com,DIRECT
 DOMAIN-SUFFIX,bytemaimg.com,DIRECT
 DOMAIN-SUFFIX,bytemastatic.com,DIRECT
+DOMAIN-SUFFIX,byteorge.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
@@ -899,6 +900,7 @@ DOMAIN-SUFFIX,woozooo.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
+DOMAIN-SUFFIX,wtzw.com,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
