--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -345,6 +345,7 @@ DOMAIN-SUFFIX,ecombdapi.com,DIRECT
 DOMAIN-SUFFIX,ecombdimg.com,DIRECT
 DOMAIN-SUFFIX,ecombdpage.com,DIRECT
 DOMAIN-SUFFIX,ecombdstatic.com,DIRECT
+DOMAIN-SUFFIX,ecombdvod.com,DIRECT
 DOMAIN-SUFFIX,ecukwai.com,DIRECT
 DOMAIN-SUFFIX,edge-byted.com,DIRECT
 DOMAIN-SUFFIX,edgesrv.com,DIRECT
@@ -865,6 +866,7 @@ DOMAIN-SUFFIX,volccdn.com,DIRECT
 DOMAIN-SUFFIX,volceapplog.com,DIRECT
 DOMAIN-SUFFIX,volces.com,DIRECT
 DOMAIN-SUFFIX,volcimagex.net,DIRECT
+DOMAIN-SUFFIX,volcsirius.com,DIRECT
 DOMAIN-SUFFIX,volcvideo.com,DIRECT
 DOMAIN-SUFFIX,volcvod.com,DIRECT
 DOMAIN-SUFFIX,vpimg1.com,DIRECT
