--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -515,6 +515,7 @@ DOMAIN-SUFFIX,jinritemai.com,DIRECT
 DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
+DOMAIN-SUFFIX,jlpay.com,DIRECT
 DOMAIN-SUFFIX,joinchitchat.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
