--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -43,7 +43,7 @@ DOMAIN-SUFFIX,bing.com.cn,PROXY
 DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
-DOMAIN-SUFFIX,0kkkkkt.com,PROXY
+DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
@@ -623,6 +623,7 @@ DOMAIN-SUFFIX,miaopai.com,DIRECT
 DOMAIN-SUFFIX,miaozhen.com,DIRECT
 DOMAIN-SUFFIX,miercn.com,DIRECT
 DOMAIN-SUFFIX,miguvideo.com,DIRECT
+DOMAIN-SUFFIX,mihoyo.com,DIRECT
 DOMAIN-SUFFIX,minapp.com,DIRECT
 DOMAIN-SUFFIX,miui.com,DIRECT
 DOMAIN-SUFFIX,miwifi.com,DIRECT
