--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -147,6 +147,7 @@ DOMAIN-SUFFIX,amd.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
 DOMAIN-SUFFIX,anquan.info,DIRECT
+DOMAIN-SUFFIX,antgroup.com,DIRECT
 DOMAIN-SUFFIX,anythinktech.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
 DOMAIN-SUFFIX,apple886.com,DIRECT
