--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -146,6 +146,7 @@ DOMAIN-SUFFIX,amap.com,DIRECT
 DOMAIN-SUFFIX,amd.com,DIRECT
 DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
+DOMAIN-SUFFIX,annuoxun.com,DIRECT
 DOMAIN-SUFFIX,anquan.info,DIRECT
 DOMAIN-SUFFIX,antgroup.com,DIRECT
 DOMAIN-SUFFIX,anythinktech.com,DIRECT
@@ -910,6 +911,7 @@ DOMAIN-SUFFIX,wuyuidc.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
+DOMAIN-SUFFIX,xdrtc.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.net,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
