--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -169,6 +169,7 @@ DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidupcs.com,DIRECT
 DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
+DOMAIN-SUFFIX,baikemy.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
