--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -91,6 +91,7 @@ DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
 DOMAIN-SUFFIX,63243.com,DIRECT
+DOMAIN-SUFFIX,66mobi.com,DIRECT
 DOMAIN-SUFFIX,67tool.com,DIRECT
 DOMAIN-SUFFIX,699pic.com,DIRECT
 DOMAIN-SUFFIX,6k6g.com,DIRECT
@@ -100,6 +101,7 @@ DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,87086998.xyz,DIRECT
+DOMAIN-SUFFIX,8le8le.com,DIRECT
 DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
 DOMAIN-SUFFIX,91hka.com,DIRECT
